--- a/App5/App5.Android/Properties/AndroidManifest.xml
+++ b/App5/App5.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="hyangy.hyangy">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="App5.Android"></application>
+	<application android:label="project1.Android" android:icon="@drawable/person"></application>
 </manifest>
